Layout and center area

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,77 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Portfolio</h1>
+
+    <header>
+      <img src="" alt="">
+      <h2>Hi, I'm Ryan A. Vurva</h2>
+      <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
+    </header>
+
+    <main>
+
+      <div class="small">
+        <div class="small-pic"><img id="clip" src="images/one-list.png" alt=""></div>
+        <div class="small-pic"><img src="images/make-it-rain.png" alt=""></div>
+        <div class="small-pic"><img src="images/bomb-sniffer.png" alt=""></div>
+        <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
+      </div>
+
+
+      <div class="large">
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+          <div>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="large">
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+          <div>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="connected">
+        <div>
+          <div>
+            <p></p>
+          </div>
+          <div>
+            <img src="images/twitter.png" alt="" width="80px" height="80px">
+            <img src="images/twitter.png" alt="" width="80px" height="80px">
+            <img src="images/twitter.png" alt="" width="80px" height="80px">
+            <img src="images/twitter.png" alt="" width="80px" height="80px">
+            <img src="images/twitter.png" alt="" width="80px" height="80px">
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </main>
+
+    <footer>
+      <p></p>
+    </footer>
+
   </body>
 </html>
