worked on the header area

--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
+
+<head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Portfolio</h1>
 
     <header>
-      <img src="" alt="">
-      <h2>Hi, I'm Ryan A. Vurva</h2>
-      <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
+        <div class="profile">
+            <div class="me">
+                <img src="images/selfie.jpg" alt="" width="150px" height="150px">
+            </div>
+            <div class="about-me">
+                <h2>Hi, I'm Ryan A. Vurva</h2>
+                <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
+            </div>
+        </div>
+
     </header>
 
     <main>
 
-      <div class="small">
-        <div class="small-pic"><img id="clip" src="images/one-list.png" alt=""></div>
-        <div class="small-pic"><img src="images/make-it-rain.png" alt=""></div>
-        <div class="small-pic"><img src="images/bomb-sniffer.png" alt=""></div>
-        <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
-      </div>
+
+        <div class="small">
+            <div class="small-pic"><img src="images/one-list.png" alt=""></div>
+            <div class="small-pic"><img src="images/make-it-rain.png" alt=""></div>
+            <div class="small-pic"><img src="images/bomb-sniffer.png" alt=""></div>
+            <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
+        </div>
 
 
-      <div class="large">
-        <div>
-          <img src="" alt="">
+        <div class="large">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <p></p>
+                </div>
+            </div>
         </div>
-        <div>
-          <div>
-            <h3></h3>
-            <p></p>
-          </div>
-          <div>
-            <p></p>
-          </div>
-        </div>
-      </div>
 
-      <div class="large">
-        <div>
-          <img src="" alt="">
+        <div class="large">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <p></p>
+                </div>
+            </div>
         </div>
-        <div>
-          <div>
-            <h3></h3>
-            <p></p>
-          </div>
-          <div>
-            <p></p>
-          </div>
-        </div>
-      </div>
 
-      <div class="connected">
-        <div>
-          <div>
-            <p></p>
-          </div>
-          <div>
-            <img src="images/twitter.png" alt="" width="80px" height="80px">
-            <img src="images/twitter.png" alt="" width="80px" height="80px">
-            <img src="images/twitter.png" alt="" width="80px" height="80px">
-            <img src="images/twitter.png" alt="" width="80px" height="80px">
-            <img src="images/twitter.png" alt="" width="80px" height="80px">
-          </div>
+        <div class="connected">
+            <div>
+                <div>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                </div>
+            </div>
         </div>
-      </div>
 
 
 
@@ -76,8 +86,9 @@
     </main>
 
     <footer>
-      <p></p>
+        <p></p>
     </footer>
 
-  </body>
+</body>
+
 </html>
