got the talking bubble to look right

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,16 @@
             <div class="me">
                 <img src="images/selfie.jpg" alt="" width="150px" height="150px">
             </div>
-            <div class="about-me">
+            <div>
+              <div class="about-me">
                 <h2>Hi, I'm Ryan A. Vurva</h2>
                 <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
+              </div>
+              <div class="tri">
+                <img src="images/tri.png" alt="">
+              </div>
             </div>
+
         </div>
 
     </header>
