footer and large div worked on
also wasted time on pic, need to finish that

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="profile">
             <div class="me">
-                <img src="images/selfie.jpg" alt="" width="150px" height="150px">
+                <img id="me" src="images/selfie.jpg" alt="My Handsome Face" width="350px" height="">
             </div>
             <div>
               <div class="about-me">
@@ -31,8 +31,6 @@
     </header>
 
     <main>
-
-
         <div class="small">
             <div class="small-pic"><img src="images/one-list.png" alt=""></div>
             <div class="small-pic"><img src="images/make-it-rain.png" alt=""></div>
@@ -40,17 +38,16 @@
             <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
         </div>
 
-
         <div class="large">
             <div>
-                <img src="" alt="">
+                <img src="images/react.png" alt="">
             </div>
-            <div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+            <div class="react">
+                <div class="react-header">
+                    <h3>Hello, React.</h3>
+                    <p>Dec. 13th 2016</p>
                 </div>
-                <div>
+                <div class="react-info">
                     <p></p>
                 </div>
             </div>
@@ -73,8 +70,8 @@
 
         <div class="connected">
             <div>
-                <div>
-                    <p></p>
+                <div class="stay">
+                    <p>Stay connected with me.</p>
                 </div>
                 <div>
                     <img src="images/twitter.png" alt="" width="80px" height="80px">
@@ -92,7 +89,7 @@
     </main>
 
     <footer>
-        <p></p>
+        <p>Copyright &copy; 2017 Ryan A. Vurva.  Built with <span class="heart">&#x2661;</span> at The Iron Yard.</p>
     </footer>
 
 </body>
