finished the large content boxes
need to figure out the blue boxes and still fix my profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
                 <img id="me" src="images/selfie.jpg" alt="My Handsome Face" width="350px" height="">
             </div>
             <div>
-              <div class="about-me">
-                <h2>Hi, I'm Ryan A. Vurva</h2>
-                <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
-              </div>
-              <div class="tri">
-                <img src="images/tri.png" alt="">
-              </div>
+                <div class="about-me">
+                    <h2>Hi, I'm Ryan A. Vurva</h2>
+                    <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
+                </div>
+                <div class="tri">
+                    <img src="images/tri.png" alt="">
+                </div>
             </div>
 
         </div>
@@ -38,58 +38,60 @@
             <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
         </div>
 
-        <div class="large">
-            <div>
-                <img src="images/react.png" alt="">
-            </div>
-            <div class="react">
-                <div class="react-header">
-                    <h3>Hello, React.</h3>
-                    <p>Dec. 13th 2016</p>
+        <div class="seperator">
+            <div class="large">
+                <div class="react-pic">
+                    <img id="react-pic" src="images/react.png" alt="React image">
                 </div>
-                <div class="react-info">
-                    <p></p>
+                <div class="react-text">
+                    <div class="react-header">
+                        <h3>Hello, React.</h3>
+                        <p>Dec. 13th 2016</p>
+                    </div>
+                    <div class="react-info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil aut labore impedit, illum maiores aliquam odit, atque, itaque velit quas deleniti temporibus voluptatum. Non, animi? Facere perferendis veniam tempora placeat!</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="large">
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+            <div class="large">
+                <div class="code">
+                    <img id="code" src="images/code.png" alt="Fizz Buzz">
                 </div>
-                <div>
-                    <p></p>
+                <div class="fizz-text">
+                    <div class="fizz-header">
+                        <h3>Fizz Buzz</h3>
+                        <p>January 3rd, 2017</p>
+                    </div>
+                    <div class="fizz-info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ipsam maiores architecto, blanditiis! Assumenda neque saepe delectus, eum non, perspiciatis mollitia repellat earum minus distinctio dolorem commodi repellendus, fugiat
+                            consequuntur?</p>
+                    </div>
                 </div>
             </div>
-        </div>
-
         <div class="connected">
             <div>
                 <div class="stay">
                     <p>Stay connected with me.</p>
                 </div>
-                <div>
-                    <img src="images/twitter.png" alt="" width="80px" height="80px">
-                    <img src="images/twitter.png" alt="" width="80px" height="80px">
-                    <img src="images/twitter.png" alt="" width="80px" height="80px">
-                    <img src="images/twitter.png" alt="" width="80px" height="80px">
-                    <img src="images/twitter.png" alt="" width="80px" height="80px">
+                <div class="tweet">
+                    <img src="images/twitter.png" alt="twitter" width="60px" height="60px">
+                    <img src="images/twitter.png" alt="twitter" width=60px " height="60px ">
+                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
+                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
+                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
                 </div>
             </div>
         </div>
 
 
 
+      </div>
 
     </main>
 
     <footer>
-        <p>Copyright &copy; 2017 Ryan A. Vurva.  Built with <span class="heart">&#x2661;</span> at The Iron Yard.</p>
+        <p>Copyright &copy; 2017 Ryan A. Vurva.  Built with <span class="heart ">&#x2661;</span> at The Iron Yard.</p>
     </footer>
 
 </body>
