finished with the mockup design
now time to move onto customizing it, but its turned in for now

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil aut labore impedit, illum maiores aliquam odit, atque, itaque velit quas deleniti temporibus voluptatum. Non, animi? Facere perferendis veniam tempora placeat!</p>
                     </div>
                 </div>
+                <div class="blue-box1">
+                    <h3>KEEP READING</h3>
+                </div>
             </div>
 
             <div class="large">
@@ -65,24 +68,29 @@
                     </div>
                     <div class="fizz-info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ipsam maiores architecto, blanditiis! Assumenda neque saepe delectus, eum non, perspiciatis mollitia repellat earum minus distinctio dolorem commodi repellendus, fugiat
-                            consequuntur?</p>
+                            consequuntur?
+                        </p>
                     </div>
                 </div>
-            </div>
-        <div class="connected">
-            <div>
-                <div class="stay">
-                    <p>Stay connected with me.</p>
+                <div class="blue-box2">
+                    <h3>KEEP READING</h3>
                 </div>
-                <div class="tweet">
-                    <img src="images/twitter.png" alt="twitter" width="60px" height="60px">
-                    <img src="images/twitter.png" alt="twitter" width=60px " height="60px ">
+            </div>
+            <div class="connected">
+                <div>
+                    <div class="stay">
+                        <p>Stay connected with me.</p>
+                    </div>
+                    <div class="tweet">
+                        <img src="images/twitter.png" alt="twitter" width="60px" height="60px">
+                        <img src="images/twitter.png" alt="twitter" width=60px " height="60px ">
                     <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
                     <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
                     <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
                 </div>
             </div>
         </div>
+      </div>
 
 
 
