finished customizing it to my own style

--- a/public/index.html
+++ b/public/index.html
@@ -4,104 +4,81 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Portfolio</title>
+    <title>Myportfolio</title>
     <link rel="stylesheet" href="/screen.css">
 </head>
 
 <body>
-    <h1>Portfolio</h1>
 
     <header>
         <div class="profile">
-            <div class="me">
-                <img id="me" src="images/selfie.jpg" alt="My Handsome Face" width="350px" height="">
-            </div>
             <div>
-                <div class="about-me">
-                    <h2>Hi, I'm Ryan A. Vurva</h2>
+                <div class="hello">
+                    <h1>Hi, I'm Ryan A. Vurva</h1>
                     <p>I'm a Jr. Front-End Engineer in St. Petersburg FL.</p>
-                </div>
-                <div class="tri">
-                    <img src="images/tri.png" alt="">
+                    <p><a href="#slider-1">Scroll down</a> to see what I can do for <em><strong>you</strong></em>!</p>
                 </div>
             </div>
-
         </div>
-
     </header>
-
     <main>
-        <div class="small">
-            <div class="small-pic"><img src="images/one-list.png" alt=""></div>
-            <div class="small-pic"><img src="images/make-it-rain.png" alt=""></div>
-            <div class="small-pic"><img src="images/bomb-sniffer.png" alt=""></div>
-            <div class="small-pic"><img src="images/sensei-sense.png" alt=""></div>
+        <div class="slider" id="slider-1">
+            <div class="first">
+                <p>Ryan Vurva is a Jr. developer in the Tampa Bay area. He loves to do code work and has many acquired skills to do the job you need. His motto is: "Always moving forward to make your design great.<br>Here are a few examples of projects I've
+                    worked on...</p>
+            </div>
+            <div class="second">
+                <div class="projects">
+                    <img id="project-1" src="images/guy-coding.jpg" alt="a person coding on a laptop" />
+                </div>
+                <div class="projects">
+                    <img id="project-2" src="images/responsive-devices.jpg" alt="responsive website designs" />
+                </div>
+            </div>
+            <div class="third">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
         </div>
-
-        <div class="seperator">
-            <div class="large">
-                <div class="react-pic">
-                    <img id="react-pic" src="images/react.png" alt="React image">
-                </div>
-                <div class="react-text">
-                    <div class="react-header">
-                        <h3>Hello, React.</h3>
-                        <p>Dec. 13th 2016</p>
-                    </div>
-                    <div class="react-info">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil aut labore impedit, illum maiores aliquam odit, atque, itaque velit quas deleniti temporibus voluptatum. Non, animi? Facere perferendis veniam tempora placeat!</p>
-                    </div>
-                </div>
-                <div class="blue-box1">
-                    <h3>KEEP READING</h3>
-                </div>
+        <div class="slider-2">
+            <div class="skills">
+                <h2>Skills I am proficient in:</h2>
             </div>
-
-            <div class="large">
-                <div class="code">
-                    <img id="code" src="images/code.png" alt="Fizz Buzz">
-                </div>
-                <div class="fizz-text">
-                    <div class="fizz-header">
-                        <h3>Fizz Buzz</h3>
-                        <p>January 3rd, 2017</p>
-                    </div>
-                    <div class="fizz-info">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ipsam maiores architecto, blanditiis! Assumenda neque saepe delectus, eum non, perspiciatis mollitia repellat earum minus distinctio dolorem commodi repellendus, fugiat
-                            consequuntur?
-                        </p>
-                    </div>
-                </div>
-                <div class="blue-box2">
-                    <h3>KEEP READING</h3>
-                </div>
+            <div class="skills-pics">
+                <img src="images/code-logos.png" alt="html 5 css 3 javascript" width="100%">
             </div>
+            <div class="wordpress">
+                <img src="images/wordpress-logo-long.png" alt="wordpress" width="100%">
+            </div>
+        </div>
+        <div class="slider-3">
             <div class="connected">
                 <div>
-                    <div class="stay">
-                        <p>Stay connected with me.</p>
+                    <div class="goodbye">
+                        <h1>Stay connected with me on Social Media!</h1>
+                        <p>Here are some links for you to reach me.</p>
                     </div>
-                    <div class="tweet">
-                        <img src="images/twitter.png" alt="twitter" width="60px" height="60px">
-                        <img src="images/twitter.png" alt="twitter" width=60px " height="60px ">
-                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
-                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
-                    <img src="images/twitter.png " alt="twitter " width="60px " height="60px ">
+                </div>
+            </div>
+            <div class="icons">
+                <div class="social">
+                    <a href="#"><img src="images/facebook.png" alt="" width="100%"></a>
+                </div>
+                <div class="social">
+                    <a href="#"><img src="images/instagram.png" alt="" width="100%"></a>
+                </div>
+                <div class="social">
+                    <a href="#"><img src="images/linkedin.png" alt="" width="100%"></a>
+                </div>
+                <div class="social">
+                    <a href="#"><img src="images/twitter.png" alt="" width="100%"></a>
                 </div>
             </div>
         </div>
-      </div>
-
-
-
-      </div>
-
     </main>
-
     <footer>
-        <p>Copyright &copy; 2017 Ryan A. Vurva.  Built with <span class="heart ">&#x2661;</span> at The Iron Yard.</p>
+        <p>Copyright &copy; 2017 Ryan A. Vurva. Built with <span class="heart ">&#x2661;</span> at The Iron Yard.</p>
     </footer>
-
 </body>
 
 </html>
