Added a link to my blog towards the bottom

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Myportfolio</title>
     <link rel="stylesheet" href="/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -55,23 +56,38 @@
             <div class="connected">
                 <div>
                     <div class="goodbye">
-                        <h1>Stay connected with me on Social Media!</h1>
-                        <p>Here are some links for you to reach me.</p>
+                        <h1>Stay connected with me on Social Media.</h1>
+                        <p>I'd love to get to know you as well!</p>
                     </div>
                 </div>
             </div>
             <div class="icons">
                 <div class="social">
-                    <a href="#"><img src="images/facebook.png" alt="" width="100%"></a>
+                    <a href="#"><img src="images/facebook.png" alt="facebook" width="100%"></a>
                 </div>
                 <div class="social">
-                    <a href="#"><img src="images/instagram.png" alt="" width="100%"></a>
+                    <a href="#"><img src="images/instagram.png" alt="instagram" width="100%"></a>
                 </div>
                 <div class="social">
-                    <a href="#"><img src="images/linkedin.png" alt="" width="100%"></a>
+                    <a href="#"><img src="images/linkedin.png" alt="linked in" width="100%"></a>
                 </div>
                 <div class="social">
-                    <a href="#"><img src="images/twitter.png" alt="" width="100%"></a>
+                    <a href="#"><img src="images/twitter.png" alt="twitter" width="100%"></a>
+                </div>
+            </div>
+        </div>
+        <div class="slider-4">
+            <div class="blog-header">
+                <h3>My Blog</h3>
+            </div>
+            <div class="blog-body">
+                <div class="blog">
+                    <div class="medium">
+                      <a href="https://medium.com/@theeffinvurv"><img src="images/medium.png" alt="" width="30%"></a>
+                    </div>
+                    <div>
+                      <p>Come check out my Blog about my journey learning how to write code and the problems and projects I've been working on.  Made available by <a href="https://medium.com/@theeffinvurv">Medium.com</a>!</p>
+                    </div>
                 </div>
             </div>
         </div>
