--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="slider-4">
             <div class="blog-header">
-                <h3>My Blog</h3>
+                <h3>Blog</h3>
             </div>
             <div class="blog-body">
                 <div class="blog">
