--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-        <div class="slider" id="slider-1">
+        <div class="slider-1">
             <div class="first">
                 <p>Ryan Vurva is a Jr. developer in the Tampa Bay area. He loves to do code work and has many acquired skills to do the job you need. His motto is: "Always moving forward to make your design great.<br>Here are a few examples of projects I've
                     worked on...</p>
@@ -41,6 +41,9 @@
                     aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
+        <div class="bar">
+
+        </div>
         <div class="slider-2">
             <div class="skills">
                 <h2>Skills I am proficient in:</h2>
@@ -51,6 +54,9 @@
             <div class="wordpress">
                 <img src="images/wordpress-logo-long.png" alt="wordpress" width="100%">
             </div>
+        </div>
+        <div class="bar">
+
         </div>
         <div class="slider-3">
             <div class="connected">
@@ -76,6 +82,9 @@
                 </div>
             </div>
         </div>
+        <div class="bar-2">
+
+        </div>
         <div class="slider-4">
             <div class="blog-header">
                 <h3>Blog</h3>
@@ -83,17 +92,25 @@
             <div class="blog-body">
                 <div class="blog">
                     <div class="medium">
-                      <a href="https://medium.com/@theeffinvurv"><img src="images/medium.png" alt="" width="30%"></a>
+                      <a href="https://medium.com/@theeffinvurv" title="My Blog"><img src="images/medium.png" alt="" width="30%"></a>
                     </div>
                     <div>
-                      <p>Come check out my Blog about my journey learning how to write code and the problems and projects I've been working on.  Made available by <a href="https://medium.com/@theeffinvurv">Medium.com</a>!</p>
+                      <p>Come check out my Blog about my journey learning how to write code and the problems and projects I've been working on.  Made available by <button><a href="https://medium.com/@theeffinvurv">Medium.com</a>!</button></p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="bar-2">
+
+        </div>
+        <div class="slider-5">
+            <div class="test">
+
+            </div>
+        </div>
     </main>
     <footer>
-        <p>Copyright &copy; 2017 Ryan A. Vurva. Built with <span class="heart ">&#x2661;</span> at The Iron Yard.</p>
+        <p>Copyright &copy; 2017 Ryan A. Vurva. Built with &hearts; at The Iron Yard.</p>
     </footer>
 </body>
 
